--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
     "@angular/platform-browser": "^15.1.0",
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
-    "angular-google-charts": "^2.2.3",
     "bootstrap": "^5.2.2",
+    "chart.js": "^4.2.1",
     "jwt-decode": "^3.1.2",
+    "ng2-charts": "^4.1.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
